--- a/resume.tex
+++ b/resume.tex
@@ -76,25 +76,28 @@
 
 %-----------SUMMARY-----------------
 \section{Summary Statement}
-I am a results-driven Full Stack Software Engineer with a passion for crafting seamless and innovative web and mobile applications. I bring proficiency in a diverse set of technologies, including JavaScript and TypeScript, along with expertise in React, React Native, HTML, CSS, Node.js, Express, and various database systems. My skill set extends to modern tooling and frameworks, such as Vite and Next.js. Throughout my career, I've navigated the entire software development lifecycle, from conceptualization and design to deployment and maintenance. Additionally, I possess extensive experience in DevOps practices, ensuring scalable and efficient solutions. With a proven track record of delivering high-quality software solutions on time and within budget, I am ready to contribute my technical expertise, creativity, and commitment to excellence to your development team.
+I am a results-driven Software Developer with a keen interest in blockchain and cryptography. Currently, I focus on implementing various blockchain protocols, such as digital signature schemes, funding algorithms, asset tokenization, DAOs, and token economics. My contributions span open source blockchain protocols and projects, including the Internet Computer and Bitcoin Layer 2s. I have extensive experience in web2 development with TypeScript, React Native, and Node.js, building products for diverse clients. Additionally, I am an author working on a book, "The Nitty Gritty of Blockchain and Cryptocurrency Engineering," which delves into blockchain concepts to provide a solid foundation in cryptocurrency engineering.
 
 %-----------EXPERIENCE-----------------
 \section{Work Experience}
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{CTO, Software Engineer}{Nichlabs}
-{October 2023 - Present}
+{Software Developer}{Freelance}
+{June 2022 - Present}
 {\begin{tabular}[t]{@{}p{\linewidth}@{}}
-As the CTO at Nichlabs, I spearheaded the platform's development by collaborating with the design team to establish the overall design strategy. My role involved building the backend infrastructure using GraphQL and Node.js, ensuring a solid foundation for the application. I worked closely with frontend developers to seamlessly integrate backend and frontend components, resulting in a user-friendly app. Additionally, I took charge of server availability by implementing DevOps techniques, guaranteeing the continuous operation of our servers. This experience allowed me to contribute not only to the technical aspects of the project but also to provide leadership throughout the development lifecycle.
-\end{tabular}}
-
-
-\resumeSubheading
-{React Native Mobile Developer}{Particle Ventures}
-{April 2023 - September 2023}
-{\begin{tabular}[t]{@{}p{\linewidth}@{}}
-{As a React Native Mobile App Developer at Particle Ventures, I played a pivotal role in the development of the Tamu mobile application, a dynamic social networking app. Collaborating seamlessly with a cross-functional team, including UI/UX designers, backend developers, and another frontend developer, I successfully contributed to building a feature-rich app for both iOS and Android platforms. My responsibilities encompassed the end-to-end development process, from collaborating with UI/UX designers to bring design concepts to life, to working closely with the backend team to ensure seamless integration of front-end and back-end components. This collaborative approach resulted in the creation of a user-centric mobile application that met both design and functionality requirements. The experience of developing the Tamu app further honed my skills in React Native, mobile app development, and effective teamwork, reinforcing my commitment to delivering high-quality and engaging user experiences.}
+- Implemented various blockchain protocols, including digital signature schemes, funding algorithms, asset tokenization, DAOs, and token economics. \\
+- Contributed to open source blockchain projects such as the Internet Computer and Bitcoin Layer 2s. \\
+- Developed a Rust library for converting ICP tokens into cycles programmatically. \\
+- Built a platform for creating ICRC2 tokens without coding. \\
+- Created a decentralized funding DAO for investors to fund high-growth web3 startups. \\
+- Authored "lsig," a Lamport signatures implementation in Rust. \\
+- Writing "The Nitty Gritty of Blockchain and Cryptocurrency Engineering," a book on blockchain concepts. \\
+- Built web2 products using TypeScript, React Native, and Node.js for clients, including DV Tech Ventures and Nichlabs. \\
+- Developed Kwalito Fruits' software to manage employees, suppliers, and casual laborers. \\
+- Built and monetized API products like Veestream, earning over \$500 in 3 months. \\
+- Created open source npm packages such as quick-mongo-seed for database seeding in test environments. \\
+- Assisted DV Tech Ventures in launching Sober Token, a utility token rewarded based on app usage.
 \end{tabular}}
 
 \resumeSubHeadingListEnd
@@ -114,31 +117,37 @@ As the CTO at Nichlabs, I spearheaded the platform's development by collaboratin
 %-----------TECHNICAL SKILLS-----------------
 \section{Technical Skills}
 \resumeSubHeadingListStart
-\resumeItem{Rust}{}
-\resumeItem{Node.js}{}
-\resumeItem{Typescript}{}
-\resumeItem{JavaScript}{}
-\resumeItem{React Native}{}
-\resumeItem{React.js}{}
-\resumeItem{ICP Blockchain}{}
-\resumeItem{Langchain}{}
-\resumeItem{Nginx}{}
+\resumeItem{Programming Languages}
+{Rust, Node.js, TypeScript, JavaScript}
+\resumeItem{Frameworks and Libraries}
+{React Native, React.js, Langchain}
+\resumeItem{Blockchain Technologies}
+{ICP Blockchain, Bitcoin Layer 2s}
+\resumeItem{Tools and Platforms}
+{Nginx, Microsoft Azure}
 \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
 \resumeSubHeadingListStart
+\resumeItem{Rust ICP Cycles Library}
+{Developed a Rust library to programmatically convert ICP tokens into cycles.}
+\resumeItem{ICRC2 Token Platform}
+{Built a platform to create ICRC2 tokens on the fly without coding.}
+\resumeItem{Decentralized Funding DAO}
+{Created a DAO for decentralized funding of high-growth web3 startups.}
+\resumeItem{lsig}
+{Authored "lsig," a Lamport signatures implementation in Rust.}
 \resumeItem{Video Processing App}
-{Developed a video processing app using Node js, React Native and ffmpeg.}
+{Developed a video processing app using Node.js, React Native, and ffmpeg.}
 \resumeItem{Asset Tokenization System}
 {Implemented an asset tokenization system using ICP, Rust CDK, and React Native. (\href{https://github.com/amschel99/Quillo}{https://github.com/amschel99/Quillo})}
-
 \resumeItem{File Storage and Management API}
-{Created a file storage and management API using Microsoft Azure and Node.js.(\href{https://github.com/amschel99/veestream}{https://github.com/amschel99/Quillo})}
+{Created a file storage and management API using Microsoft Azure and Node.js. (\href{https://github.com/amschel99/veestream}{https://github.com/amschel99/veestream})}
 \resumeItem{Database Seeding Library}
-{Developed a database seeding library using TypeScript to be used during software testing alongside Jest.(\href{https://github.com/amschel99/quick-mongo-seed}{https://github.com/amschel99/Quillo})}
+{Developed a database seeding library using TypeScript for software testing. (\href{https://github.com/amschel99/quick-mongo-seed}{https://github.com/amschel99/quick-mongo-seed})}
 \resumeItem{LLM Bot}
-{Designed an LLM (Learn from PDFs, Respond to Queries) bot capable of learning from PDFs and responding to queries.(\href{https://github.com/amschel99/Yip}{https://github.com/amschel99/Yip})}
+{Designed an LLM bot capable of learning from PDFs and responding to queries. (\href{https://github.com/amschel99/Yip}{https://github.com/amschel99/Yip})}
 \resumeSubHeadingListEnd
 
 %-------------------------------------------
