--- a/resume.tex
+++ b/resume.tex
@@ -83,22 +83,41 @@ I am a results-driven Software Developer with a keen interest in blockchain and 
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{Software Developer}{Freelance}
-{June 2022 - Present}
-{\begin{tabular}[t]{@{}p{\linewidth}@{}}
-- Implemented various blockchain protocols, including digital signature schemes, funding algorithms, asset tokenization, DAOs, and token economics. \\
-- Contributed to open source blockchain projects such as the Internet Computer and Bitcoin Layer 2s. \\
-- Developed a Rust library for converting ICP tokens into cycles programmatically. \\
-- Built a platform for creating ICRC2 tokens without coding. \\
-- Created a decentralized funding DAO for investors to fund high-growth web3 startups. \\
-- Authored "lsig," a Lamport signatures implementation in Rust. \\
-- Writing "The Nitty Gritty of Blockchain and Cryptocurrency Engineering," a book on blockchain concepts. \\
-- Built web2 products using TypeScript, React Native, and Node.js for clients, including DV Tech Ventures and Nichlabs. \\
-- Developed Kwalito Fruits' software to manage employees, suppliers, and casual laborers. \\
-- Built and monetized API products like Veestream, earning over \$500 in 3 months. \\
-- Created open source npm packages such as quick-mongo-seed for database seeding in test environments. \\
-- Assisted DV Tech Ventures in launching Sober Token, a utility token rewarded based on app usage.
-\end{tabular}}
+{React Native Mobile Developer}{Particle Ventures}
+{January 2022 - September 2022}
+{\begin{itemize}[leftmargin=*]
+  \item Developed the Tamu mobile application, a dynamic social networking app for iOS and Android.
+  \item Collaborated with cross-functional teams including UI/UX designers and backend developers.
+  \item Contributed to the end-to-end development process from design to deployment.
+\end{itemize}}
+
+\resumeSubheading
+{CTO, Software Engineer}{Nichlabs}
+{March 2023 - October 2023}
+{\begin{itemize}[leftmargin=*]
+  \item Spearheaded platform development, collaborating with design teams to establish design strategies.
+  \item Built backend infrastructure using GraphQL and Node.js, ensuring robust application foundations.
+  \item Integrated frontend and backend components seamlessly, enhancing user experience.
+  \item Implemented DevOps practices for server availability and continuous operation.
+\end{itemize}}
+
+\resumeSubheading
+{Software Developer}{Serenity}
+{December 2023 - February 2024}
+{\begin{itemize}[leftmargin=*]
+  \item Developed Serenity, an app to assist recovering addicts in their recovery journey.
+  \item Implemented the Sober Token, a utility token for app users based on their usage.
+  \item Contributed to the technical development and tokenomics of Sober Token.
+\end{itemize}}
+
+\resumeSubheading
+{Decentralized Funding DAO Developer}{Olympus Accelerator (ICP Hub Kenya)}
+{January 2024 - June 2024}
+{\begin{itemize}[leftmargin=*]
+  \item Developed a decentralized funding DAO for high-growth web3 startups.
+  \item Incubated and supported under the Olympus Accelerator platform at ICP Hub Kenya.
+  \item Facilitated funding mechanisms and governance structures leveraging blockchain technologies.
+\end{itemize}}
 
 \resumeSubHeadingListEnd
 
@@ -141,13 +160,12 @@ I am a results-driven Software Developer with a keen interest in blockchain and 
 \resumeItem{Video Processing App}
 {Developed a video processing app using Node.js, React Native, and ffmpeg.}
 \resumeItem{Asset Tokenization System}
-{Implemented an asset tokenization system using ICP, Rust CDK, and React Native. (\href{https://github.com/amschel99/Quillo}{https://github.com/amschel99/Quillo})}
+{Implemented an asset tokenization system using ICP, Rust CDK. Currently proprietary  }
 \resumeItem{File Storage and Management API}
-{Created a file storage and management API using Microsoft Azure and Node.js. (\href{https://github.com/amschel99/veestream}{https://github.com/amschel99/veestream})}
+{Created a file storage and management API using Microsoft Azure and Node.js. Monetized at Rapid API for 3 months. (\href{https://github.com/amschel99/veestream}{https://github.com/amschel99/veestream})}
 \resumeItem{Database Seeding Library}
 {Developed a database seeding library using TypeScript for software testing. (\href{https://github.com/amschel99/quick-mongo-seed}{https://github.com/amschel99/quick-mongo-seed})}
-\resumeItem{LLM Bot}
-{Designed an LLM bot capable of learning from PDFs and responding to queries. (\href{https://github.com/amschel99/Yip}{https://github.com/amschel99/Yip})}
+
 \resumeSubHeadingListEnd
 
 %-------------------------------------------
